--- a/src/app/shared/components/empleados/empleados.component.html
+++ b/src/app/shared/components/empleados/empleados.component.html
@@ -38,17 +38,10 @@
             </th>
             <th
               class="text-center"
-              *ngIf="
-                authService.hasRole([
-                  'ROLE_ADMIN',
-                  'ROLE_PRESIDENTE',
-                  'ROLE_TESORERO'
-                ])
-              "
-            >
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-pencil-alt"></i>
             </th>
-            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN'])">
+            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-trash-alt"></i>
             </th>
           </tr>
@@ -58,14 +51,7 @@
             <td>{{empleado.curp}} </td>
             <td>{{empleado.nombre}} {{empleado.apellido_p}} {{empleado.apellido_m}}</td>
             <td
-              *ngIf="
-                authService.hasRole([
-                  'ROLE_ADMIN',
-                  'ROLE_PRESIDENTE',
-                  'ROLE_TESORERO'
-                ]) && empleado.usuario
-              "
-            >
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS']) && empleado.usuario">
               <button
                 type="button"
                 name="verUser"
@@ -77,14 +63,7 @@
               </button>
             </td>
             <td
-              *ngIf="
-                authService.hasRole([
-                  'ROLE_ADMIN',
-                  'ROLE_PRESIDENTE',
-                  'ROLE_TESORERO'
-                ]) && !empleado.usuario
-              "
-            >
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS']) && !empleado.usuario">
               <button
                 type="button"
                 name="verUser"
@@ -96,14 +75,7 @@
               </button>
             </td>
             <td
-              *ngIf="
-                authService.hasRole([
-                  'ROLE_ADMIN',
-                  'ROLE_PRESIDENTE',
-                  'ROLE_TESORERO'
-                ])
-              "
-            >
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="editar"
@@ -113,7 +85,7 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </td>
-            <td *ngIf="authService.hasRole(['ROLE_ADMIN'])">
+            <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="eliminar"
