--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
       </div>
       <div class="sidebar-body">
         <ul class="navigation-list">
-          <li class="navigation-list-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+          <li class="navigation-list-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO', 'ROLE_CONTADOR'])">
             <a class="navigation-link" routerLink="generarLinea-captura">
               <div class="row">
                 <div class="col-2">
@@ -36,7 +36,7 @@
               </div>
             </a>
           </li>
-          <li class="navigation-list-item" routerLinkActive="active">
+          <li class="navigation-list-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO', 'ROLE_CONTADOR'])">
             <a class="navigation-link" routerLink="contribuciones">
               <div class="row">
                 <div class="col-2">
@@ -46,7 +46,7 @@
               </div>
             </a>
           </li>
-          <li class="navigation-list-item" routerLinkActive="active">
+          <li class="navigation-list-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO', 'ROLE_CONTADOR'])">
             <a class="navigation-link" routerLink="contribuyentes">
               <div class="row">
                 <div class="col-2">
@@ -56,7 +56,7 @@
               </div>
             </a>
           </li>
-          <li class="navigation-list-item">
+          <li class="navigation-list-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
             <a class="navigation-link" routerLink="empleados">
               <div class="row">
                 <div class="col-2">
@@ -66,7 +66,7 @@
               </div>
             </a>
           </li>
-          <li class="navigation-list-item">
+          <li class="navigation-list-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
             <a class="navigation-link" routerLink="usuario">
               <div class="row">
                 <div class="col-2">
@@ -78,11 +78,11 @@
           </li>
         </ul>
         <hr style="color: rgb(255, 255, 255); margin-top: 30px" />
-        <div class="teams-title-container">
+        <div class="teams-title-container" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_CONTADOR'])">
           <p class="teams-title">Reportes</p>
         </div>
         <ul class="teams-list">
-          <li class="teams-item">
+          <li class="teams-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_CONTADOR'])">
             <div class="row">
               <div class="col-1">
                 <i
@@ -93,7 +93,7 @@
               <div class="col-9"><a routerLink="/reportes">Contribuciones</a></div>
             </div>
           </li>
-          <li class="teams-item">
+          <li class="teams-item" routerLinkActive="active" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_CONTADOR'])">
             <div class="row">
               <div class="col-1">
                 <i
