--- a/src/app/shared/components/contribuciones/contribucion-multas-ebriedad/contribucion-multas-ebriedad.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-multas-ebriedad/contribucion-multas-ebriedad.component.html
@@ -26,7 +26,9 @@
       />
     </div>
     <div class="col-auto">
-      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',5]"> Agregar contribución</button>
+      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',5]"
+      *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+      Agregar contribución</button>
       <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',5]">Agregar Multa ebriedad</a>-->
     </div>
   </div>
