--- a/src/app/shared/components/contribuciones/contribucion-otros-productos/contribucion-otros-productos.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-otros-productos/contribucion-otros-productos.component.html
@@ -26,7 +26,9 @@
       />
     </div>
     <div class="col-auto">
-      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',7]"> Agregar contribución</button>
+      <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',7]"
+      *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+       Agregar contribución</button>
       <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',7]">Agregar contribucion Otros Productos</a>-->
     </div>
   </div>
