cambios de background de imagen para que se autoajuste

--- a/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
+++ b/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <img src="../../../../assets/img/fondo-4.jpg" width="1366px" height="665px">
+  <!--<img src="../../../../assets/img/fondo-4.jpg" width="1366px" height="665px">-->
   <div class="card">
       <h3 class="tittle"><strong>CONSULTAR ADEUDOS</strong></h3>
       <div class="card-body">
