--- a/src/app/shared/components/vista-adeudos/vista-adeudos.component.css
+++ b/src/app/shared/components/vista-adeudos/vista-adeudos.component.css
@@ -27,7 +27,11 @@
   color: #FFFFFF;
 }
 
-img{
+.main-container{
+  background-color: #740432;
+  background-size: cover;
+  height: 100vh;
+  background-image: url('../../../../assets/img/fondo-4.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed
+  background-attachment: fixed;
 }
