cambios de background en el css de recuperar contraseñas

--- a/src/app/shared/components/recuperar-password/recuperar-password.component.css
+++ b/src/app/shared/components/recuperar-password/recuperar-password.component.css
@@ -1,7 +1,10 @@
 .main-container{
-  background-color: #909497;
+  background-color: #740432;
   background-size: cover;
   height: 100vh;
+  background-image: url('../../../../assets/img/fondo-4.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .center{
@@ -24,7 +27,7 @@
   line-height: 100px;
   align-items: center;
   font-family: "Sansation", sans-serif;
-  color: #2874A6;
+  color: #740432;
 }
 
 .logo{
@@ -39,9 +42,9 @@ input[type="password"]{
   outline: none;
   background: none;
   font-size: 20px;
-  color: #2874A6;
+  color: #740432;
   padding: 20px 10px 20px 5px;
-  border: 2px solid #2874A6;
+  border: 2px solid #740432;
   width: 280px;
   height: 45px;
   margin: 15px;
@@ -53,7 +56,7 @@ input[type="password"]{
 }
 
 ::placeholder{
-  color: #2874A6;
+  color: #909497;
   font-size: 18px;
 }
 
@@ -68,15 +71,15 @@ button{
   font-size: 16px;
   line-height: 28px;
   cursor: pointer;
-  color: #2874A6;
+  color: #c8c6bb;
   border: none;
-  background: #F9DB5C;
+  background: #740432;
   border-radius: 25px;
 }
 
 button:hover{
   cursor: pointer;
-  background: #2874A6;
+  background: #a3585b;
   color: #ECF0F1;
 }
 
@@ -84,7 +87,7 @@ button:hover{
   text-align: center;
   display: block;
   margin: 18px;
-  color: #2874A6;
+  color: #909497;
   font-family: "Scheherazade New", serif;
   font-weight: bold;
   text-decoration: none;
