--- a/src/app/shared/components/contribuciones/contribucion-multas/contribucion-multas.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-multas/contribucion-multas.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-auto">
       <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',4]"
-      *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+      *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
       Agregar contribución</button>
       <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',4]">Agregar multa</a>-->
     </div>
@@ -61,10 +61,10 @@
             <th
               class="text-center"
               *ngIf="
-                authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+                authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-pencil-alt"></i>
             </th>
-            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-trash-alt"></i>
             </th>
           </tr>
@@ -78,7 +78,7 @@
             <td>{{ contribucion.cantidad}} </td>
             <td
               *ngIf="
-                authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+                authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="editar"
@@ -89,7 +89,7 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </td>
-            <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS',])">
+            <td *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS',])">
               <button
                 type="button"
                 name="eliminar"
