--- a/src/app/shared/components/contribuyentes/contribuyentes.component.html
+++ b/src/app/shared/components/contribuyentes/contribuyentes.component.html
@@ -44,7 +44,7 @@
       />
     </div>
     <div>
-      <button type="button"  class="btn boton-principal" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO', 'ROLE_CONTADOR'])"
+      <button type="button"  class="btn boton-principal" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO'])"
       data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar persona {{tipoPersona}}</button>
     </div>
   </div>
@@ -88,10 +88,10 @@
             <th>DIRECIÓN</th>
             <th
               class="text-center"
-              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO'])">
               <i class="fas fa-pencil-alt"></i>
             </th>
-            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-trash-alt"></i>
             </th>
           </tr>
@@ -109,7 +109,7 @@
               {{ contribuyente.colonia }} {{ contribuyente.codigo_postal }}
             </td>
             <td
-              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO'])">
               <button
                 type="button"
                 name="editar"
@@ -120,7 +120,7 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </td>
-            <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <td *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="eliminar"
@@ -154,10 +154,10 @@
             <th>DIRECCIÓN</th>
             <th
               class="text-center"
-              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO'])">
               <i class="fas fa-pencil-alt"></i>
             </th>
-            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-trash-alt"></i>
             </th>
           </tr>
@@ -171,7 +171,7 @@
               {{ contribuyente.colonia }} {{ contribuyente.codigo_postal }}
             </td>
             <td class="text-center"
-              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_TESORERO'])">
               <button
                 type="button"
                 name="editar" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -181,7 +181,7 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </td>
-            <td class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <td class="text-center" *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="eliminar"
