--- a/src/app/shared/components/usuarios/usuarios.component.html
+++ b/src/app/shared/components/usuarios/usuarios.component.html
@@ -15,7 +15,7 @@
     />
   </div>
   <div >
-    <button type="button"  class="btn boton-principal" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])"
+    <button type="button"  class="btn boton-principal" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])"
     routerLink="/usuario/formUsuario"
     data-bs-toggle="modal" data-bs-target="#exampleModal">Agregar Usuario</button>
   </div>
@@ -31,8 +31,8 @@
           <th>Correo</th>
           <th>estado</th>
           <th>Rol</th>
-          <th *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])"><i class="fas fa-pencil-alt"></i></th>
-          <th *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])"><i class="fas fa-trash-alt"></i></th>
+          <th *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])"><i class="fas fa-pencil-alt"></i></th>
+          <th *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])"><i class="fas fa-trash-alt"></i></th>
           <th >Desactivar</th>
       </tr>
     </thead>
@@ -42,15 +42,15 @@
           <td>{{usuario.email}}</td>
           <td [ngClass]="inputEstado.checked?'text-success':'text-danger'">{{usuario.sEstado}}</td>
           <td>{{usuario.nombre_rol}}</td>
-          <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+          <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
             <button type="button" name="editar"  class="btn btn-primary btn-sm" [routerLink]="['/usuario/formUsuario',usuario.email]"><i class="fas fa-pencil-alt"></i></button>
           </td>
-          <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+          <td *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
             <button type="button" name="eliminar"  class="btn btn-danger btn-sm" (click)='eliminarUsuario(usuario)'><i class="fas fa-trash-alt"></i></button>
           </td>
           <td>
               <label [for]="usuario.email" class="toggle-switchy" data-style="rounded">
-                  <input #inputEstado checked type="checkbox" [id]="usuario.email" [checked]="usuario.estado" (change)="onChange(usuario,inputEstado.checked)" [disabled]="!authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])" >
+                  <input #inputEstado checked type="checkbox" [id]="usuario.email" [checked]="usuario.estado" (change)="onChange(usuario,inputEstado.checked)" [disabled]="!authService.hasRole(['ROLE_ADMINSYSTEMAS'])" >
                   <span class="toggle">
                       <span class="switch"></span>
                   </span>
