--- a/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-impuesto/contribucion-impuesto.component.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-auto">
       <button type="button" class="btn boton-principal" [routerLink]="['/formulario-contribucion',1]"
-      *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+      *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
       Agregar contribución</button>
       <!--<a class="ms-auto links" [routerLink]="['/formulario-contribucion',1]">Agregar contribucion tipo Impuesto</a>-->
     </div>
@@ -60,10 +60,10 @@
             <!--<th>Cantidad</th>-->
             <th
               class="text-center"
-              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-pencil-alt"></i>
             </th>
-            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-trash-alt"></i>
             </th>
           </tr>
@@ -77,7 +77,7 @@
             <!--<td>{{ contribucion.cantidad}} </td>-->
             <td
               *ngIf="
-                authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+                authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="editar"
@@ -88,7 +88,7 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </td>
-            <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <td *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="eliminar"
