--- a/src/app/shared/components/contribuciones/contribuciones.component.html
+++ b/src/app/shared/components/contribuciones/contribuciones.component.html
@@ -27,7 +27,7 @@
       </div>
       <div class="col-auto">
         <button type="button" class="btn boton-principal" routerLink="/formulario-contribucion"
-        *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+        *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
          Agregar contribución</button>
         <!--<a class="ms-auto links" routerLink="/formulario-contribucion">Agregar contribucion</a>-->
       </div>
@@ -46,10 +46,10 @@
             <th>DETALLES</th>
             <th
               class="text-center"
-              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS', 'ROLE_USER'])">
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-pencil-alt"></i>
             </th>
-            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <th class="text-center" *ngIf="authService.hasRole(['ROLE_ADMINSYSTEMAS'])">
               <i class="fas fa-trash-alt"></i>
             </th>
           </tr>
@@ -70,7 +70,7 @@
               </button>
             </td>
             <td
-              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_USER', 'ROLE_ADMINSYSTEMAS'])">
+              *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="editar"
@@ -79,7 +79,7 @@
                 <i class="fas fa-pencil-alt"></i>
               </button>
             </td>
-            <td *ngIf="authService.hasRole(['ROLE_ADMIN', 'ROLE_ADMINSYSTEMAS'])">
+            <td *ngIf="authService.hasRole([ 'ROLE_ADMINSYSTEMAS'])">
               <button
                 type="button"
                 name="eliminar"
