--- a/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.html
+++ b/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.html
@@ -48,10 +48,16 @@
             <input name="total" type="text" class="form-control" placeholder="total" [(ngModel)]="this.factura.total">
           </div>
         </div>
+        <div class="col-4">
+          <div class="input-group">
+            <span class="input-group-text">Descuento %</span>
+            <input name="descuento" type="text" class="form-control" placeholder="Descuento" [(ngModel)]="this.factura.descuento">
+          </div>
+        </div>
       </div>
       <div class="form-group row mt-3">
         <div class="col-sm-2">
-          <input type="button" class="btn btn-primary2" (click)="irPasoUno()" value="  Cancelar  ">
+          <input type="button" class="btn btn-primary2" (click)="irPasoUno()" value="  Atras  ">
         </div>
         <div class="col-sm-2">
           <input type="button"  class="btn btn-primary" (click)="generarFactura()" value="Generar Linea de pago">
