se agrego el modal para pedir codigo de acceso

--- a/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
+++ b/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
@@ -6,7 +6,7 @@
           <form #lineaCaptura="ngForm">
             <div class="row g-3">
               <div class="col-sm-5">
-                <mat-form-field  appearance="outline">
+                <mat-form-field  appearance="outline" >
                   <mat-label>Buscar Contribuyente</mat-label>
                   <input type="text"
                          placeholder="Ingrese su RFC"
@@ -16,7 +16,7 @@
                          [matAutocomplete]="auto">
                          <mat-icon matSuffix>search</mat-icon>
                   <mat-autocomplete #auto="matAutocomplete" [displayWith]="mostrarNombreContribuyente" (optionSelected)="seleccionarContribuyente($event)">
-                    <mat-option *ngFor="let contribuyente of filtroContribuyente | async" [value]="contribuyente">
+                    <mat-option (click)="open(content)" data-bs-target="#exampleModal" data-bs-whatever="@mdo" *ngFor="let contribuyente of filtroContribuyente | async" [value]="contribuyente">
                       {{contribuyente.rfc_contribuyente}} {{contribuyente.nombreContribuyente}}
                     </mat-option>
                   </mat-autocomplete>
@@ -71,7 +71,7 @@
             </ng-template>
             <div class="mt-3">
               <div class="mt-3">
-                <select [(ngModel)]="value" (change)="onChange()" name="consulta" class="form-select">
+                <select [disabled]="selectEstado" [(ngModel)]="value" (change)="onChange()" name="consulta" class="form-select">
                   <option selected value='true'>Consultar contribuciones pagadas</option>
                   <option value='false'>Consultar proximos pagos de contribuciones</option>
                 </select>
@@ -110,3 +110,33 @@
         </div>
   </div>
 </div>
+
+<ng-template #content let-modal>
+  <div >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class=" text-center mt-3">
+          <h1 class="" id="exampleModalLabel">Ingrese su codigo</h1>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="recipient-name" class="col-form-label">Codigo:</label>
+              <input type="text" class="form-control" name="codigo" id="recipient-name" [(ngModel)]="codigo">
+              <div class="invalid-relleno" *ngIf="!mostrar">
+                  El codigo es invalido
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary close" aria-label="Close" (click)="cerrar()" >Cancelar </button>
+          <button type="button" (click)="verificarAutorizacion()" class="btn btn-primary">Verificar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
+
+
+
