--- a/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
+++ b/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
@@ -77,9 +77,9 @@
                 </select>
               </div>
             </div>
-            <div class="row g-2 mt-3" *ngIf="this.facturasPagadas">
-            <table class="table table-sm" *ngIf="this.facturasPagadas.length>0 || this.facturasProximas.length>0">
-              <thead>
+            <div class="row g-2 mt-3 table-wrapper-adeudos" *ngIf="this.facturasPagadas">
+            <table class="table table-bordered" *ngIf="this.facturasPagadas.length>0 || this.facturasProximas.length>0">
+              <thead class="cabecera">
                 <tr>
                   <th class="texto">Fecha</th>
                   <th class="texto">Datos de la Contribucion</th>
@@ -99,9 +99,12 @@
               <div class="col-sm-2">
 
               </div>
-              <div class="col-sm-12">
-                <div class="mx-auto" *ngIf="this.facturasPagadas">
+              <div class="row" *ngIf="this.facturasPagadas">
+                <div class="col-auto" >
                   <a *ngIf="this.facturasPagadas.length>0 || this.facturasProximas.length>0" type="button" class="btn btn-danger" href='{{base}}/api/reportes/informacionPagos/exportarPDF/{{this.contribuyente.nombreContribuyente}}/{{this.contribuyente.rfc_contribuyente}}/{{this.contribuyente.direccion}}/{{tipoConsulta}}'>Descargar PDF</a>
+                </div>
+                <div class="col-auto">
+                  <button *ngIf="this.facturasPagadas.length>0 || this.facturasProximas.length>0" class="btn btn-secondary" (click)="salir()">Salir</button>
                 </div>
               </div>
             </div>
