--- a/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
+++ b/src/app/shared/components/vista-adeudos/vista-adeudos.component.html
@@ -72,8 +72,8 @@
             <div class="mt-3">
               <div class="mt-3">
                 <select [disabled]="selectEstado" [(ngModel)]="value" (change)="onChange()" name="consulta" class="form-select">
-                  <option selected value='true'>Consultar contribuciones pagadas</option>
-                  <option value='false'>Consultar proximos pagos de contribuciones</option>
+                  <option  value="true">Consultar contribuciones pagadas</option>
+                  <option value="false">Consultar proximos pagos de contribuciones</option>
                 </select>
               </div>
             </div>
@@ -95,7 +95,7 @@
               </tbody>
             </table>
             <ng-template #facPagadasvacias>
-              <div class="text-center" *ngIf="!selectEstado">
+              <div class="text-center texto" *ngIf="!selectEstado">
                 <h1>Todavia no tiene contribuciones pagadas</h1>
               </div>
             </ng-template >
@@ -119,7 +119,7 @@
                 </tbody>
               </table>
               <ng-template #facProximasvacias>
-                <div class="text-center" *ngIf="!selectEstado">
+                <div class="text-center texto" *ngIf="!selectEstado">
                   <h1>Todavia no tiene contribuciones Proximas a pagar</h1>
                 </div>
               </ng-template >
@@ -134,7 +134,7 @@
                   <a *ngIf="this.facturasPagadas.length>0 || this.facturasProximas.length>0" type="button" class="btn btn-danger" href='{{base}}/api/reportes/informacionPagos/exportarPDF/{{this.contribuyente.nombreContribuyente}}/{{this.contribuyente.rfc_contribuyente}}/{{this.contribuyente.direccion}}/{{tipoConsulta}}'>Descargar PDF</a>
                 </div>
                 <div class="col-auto">
-                  <button *ngIf="this.facturasPagadas.length>0 || this.facturasProximas.length>0" class="btn btn-secondary" (click)="salir()">Salir</button>
+                  <button  class="btn btn-secondary" *ngIf="!selectEstado" (click)="salir()">Salir</button>
                 </div>
               </div>
             </div>
