correccion de mensajes de alerta en el paso 2

--- a/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.css
+++ b/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.css
@@ -186,6 +186,6 @@ select.list-dt:focus {
 
 .btn-primary2{
   color: white;
-  background-color: red;
-  border-color: red;
+  background-color: blue;
+  border-color: blue;
 }
