--- a/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.html
+++ b/src/app/shared/components/cobrar-contribucion-paso-dos/cobrar-contribucion-paso-dos.component.html
@@ -60,7 +60,7 @@
           <input type="button" class="btn btn-primary2" (click)="irPasoUno()" value="  Atras  ">
         </div>
         <div class="col-sm-2">
-          <input type="button"  class="btn btn-primary" (click)="generarFactura()" value="Generar Linea de pago">
+          <input type="button"  class="btn btn-primary" (click)="generarFactura()" value="Generar Recibo">
         </div>
       </div>
     </form>
