error de cerrar td

--- a/src/app/shared/components/contribuciones/contribucion-multas-vehicular/contribucion-multas-vehicular.component.html
+++ b/src/app/shared/components/contribuciones/contribucion-multas-vehicular/contribucion-multas-vehicular.component.html
@@ -76,8 +76,8 @@
             <!--<td>{{ contribucion.nivelContribucionS}} </td>-->
             <td>{{ contribucion.tipo_pago}} </td>
             <td>{{ contribucion.svehiculo}} </td>
-            <td>
-             <!-- <button
+            <!--<td>
+              <button
                 type="button"
                 name="detalles"
                 class="btn btn-primary btn-sm"
