--- a/src/app/usuario-login/login/login.component.html
+++ b/src/app/usuario-login/login/login.component.html
@@ -9,12 +9,12 @@
               <input [(ngModel)]="usuario.username" type="text" class="user-input" name="username" id="username" placeholder="Correo" autofocus required>
           </div>
           <div class=" password">
-              <input [(ngModel)]="usuario.password" type="password" class="user-input" name="password" id="password" placeholder="contraseña" required>
+              <input [(ngModel)]="usuario.password" type="password" class="user-input" name="password" id="password" placeholder="Contraseña" required>
           </div>
   </div>
       </form>
           <button (click)='login()' type="button">Ingresar</button>
-      <a routerLink="/sendEmail" class="link">olvido su contraseña?</a>
+      <a routerLink="/sendEmail" class="link">¿Olvido su contraseña?</a>
   </div>
   <div class="left">
       <h1 class="tittle">Sistema para la recaudación y control de ingresos municipales</h1>
